--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,9 @@
   "theme_color": "#1f1f1f",
   "icons": [
     {
-      "src": "https://alaricholt677.github.io/wwin12-icon.svg",
+      "src": "https://alaricholt677.github.io/win12-icon.svg",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any"
+      "type": "image/svg+xml"
     }
   ]
 }
